[package]
edition = "2021"
name = "integration-tests"
publish = false
version = "0.1.0"

[dependencies]
axum = "0.7.5"
cargo_metadata = "0.18.1"
confique = "0.2.5"
daemon-slayer = { path = "../crates/daemon-slayer", features = [
    "server-standard",
    "client-standard",
    "extras",
] }
futures = "0.3.30"
reqwest = { version = "0.12.5" }
serde = "1.0.204"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"

[dev-dependencies]
assert_cmd = "2.0.14"
