[package]
edition = "2024"
name = "integration-tests"
publish = false
version = "0.1.0"

[dependencies]
axum = "0.8.3"
cargo_metadata = "0.19.2"
confique = "0.3.0"
daemon-slayer = { path = "../crates/daemon-slayer", features = [
  "server-standard",
  "client-standard",
  "extras",
] }
futures = "0.3.31"
reqwest = { version = "0.12.15" }
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
assert_cmd = "2.0.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
