[package]
edition = "2024"
name = "integration-tests"
publish = false
version = "0.1.0"

[dependencies]
axum = { workspace = true }
cargo_metadata = { workspace = true }
confique = { workspace = true }
daemon-slayer = { workspace = true, features = [
  "server-standard",
  "client-standard",
  "extras",
] }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
