[package]
edition = "2021"
name = "testapp"
version = "0.1.0"

[features]
async-tokio = ["tokio", "daemon-slayer/async-tokio"]

[dependencies]
daemon-slayer = {path = "../daemon-slayer", default_features = false}
tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros", "sync"], optional = true}
