[package]
edition = "2021"
name = "testapp"
version = "0.1.0"

[features]
async-tokio = ["tokio", "daemon-slayer/async-tokio"]
direct = ["daemon-slayer/direct"]

[dependencies]
daemon-slayer = {path = "../daemon-slayer"}
tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros", "sync"], optional = true}
