[package]
name = "daemon-slayer-build-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = { version = "0.15" }
daemon-slayer-core = { path = "../daemon-slayer-core", features = ["cli"] }
vergen-pretty = { version = "0.3", features = ["color"] }
async-trait = { version = "0.1" }
