[package]
edition = "2021"
name = "daemon-slayer-cli"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["string"] }
daemon-slayer-core = { path = "../daemon-slayer-core", features = ["cli"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
