[package]
edition = "2024"
name = "daemon-slayer-cli"
version = "0.1.0"

[dependencies]
clap = { workspace = true, features = ["string"] }
daemon-slayer-core = { workspace = true, features = ["cli"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = { workspace = true }
