[package]
edition = "2021"
name = "daemon-slayer-client"
version = "0.1.0"

[dependencies]
arc-swap = { version = "1" }
bollard = "0.14"
confique = { version = ">= 0.2.2", optional = true }
daemon-slayer-core = { path = "../daemon-slayer-core", features = [
    "config",
    "process",
] }
derivative = "2"
dyn-clonable = "0.9"
enumflags2 = "0.7"
eyre = "0.6"
owo-colors = { version = "3", features = ["supports-colors"] }
serde = { version = "1" }
spinoff = { version = "0.7.0", optional = true }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
regex = "1"
registry = "1"
utfx = "0.1"
windows-args = "0.2"
colored = { version = "2", optional = true }
windows-service = { git = "https://github.com/aschey/windows-service-rs", rev = "32919aebe4c59f7855a8ebd72fe7d716db6a8f28" }

[target.'cfg(target_os="linux")'.dependencies]
systemd_client = { git = "https://github.com/aschey/systemd-client", rev = "220fb254a657fcc78907d7997a13a098267ff5ca" }

[target.'cfg(target_os = "macos")'.dependencies]
directories = "5"
launchd = { git = "https://github.com/aschey/launchd", rev = "7bb70df94936ae43198d7527b9be8fe25d9a48b2" }
once_cell = "1"
regex = "1"
tokio = { version = "1", features = ["time", "process"] }

[features]
cli = ["daemon-slayer-core/cli", "spinoff", "colored"]
config = ["confique"]
