[package]
edition = "2021"
name = "daemon-slayer-client"
version = "0.1.0"

[dependencies]
arc-swap = { version = "1" }
bollard = { version = "0.15", optional = true }
confique = { version = "0.2", optional = true }
daemon-slayer-core = { path = "../daemon-slayer-core", features = [
    "config",
    "process",
] }
derivative = "2"
dyn-clonable = "0.9"
enumflags2 = "0.7"
eyre = "0.6"
owo-colors = { version = "3", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
spinoff = { version = "0.8", optional = true }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
regex = "1"
registry = "1"
utfx = "0.1"
windows-args = "0.2"
colored = { version = "2", optional = true }
windows-service = { git = "https://github.com/aschey/windows-service-rs", rev = "32919aebe4c59f7855a8ebd72fe7d716db6a8f28" }

[target.'cfg(target_os="linux")'.dependencies]
systemd_client = { git = "https://github.com/aschey/systemd-client", rev = "ba6ef52e7ef2d0a3917b23b350024bba66344beb" }

[target.'cfg(target_os = "macos")'.dependencies]
directories = "5"
launchd = { git = "https://github.com/aschey/launchd", rev = "087fa6edcce3973e6fd0f4f5929c869da4572afc" }
once_cell = "1"
regex = "1"
tokio = { version = "1", features = ["time", "process"] }

[features]
cli = ["daemon-slayer-core/cli", "spinoff", "colored"]
config = ["confique"]
docker = ["bollard"]
