[package]
edition = "2024"
name = "daemon-slayer-client"
version = "0.1.0"

[dependencies]
arc-swap = { workspace = true }
bollard = { workspace = true, optional = true }
confique = { workspace = true, optional = true }
daemon-slayer-core = { workspace = true, features = ["config", "process"] }
derivative = { workspace = true }
dyn-clonable = { workspace = true }
enumflags2 = { workspace = true }
eyre = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
spinoff = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
async-trait = { workspace = true }

[target.'cfg(windows)'.dependencies]
regex = { workspace = true }
registry = { workspace = true }
utfx = { workspace = true }
windows-args = { workspace = true }
colored = { workspace = true, optional = true }
windows-service = { workspace = true }

[target.'cfg(target_os="linux")'.dependencies]
systemd_client = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
directories = { workspace = true }
launchd = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["time", "process"] }

[features]
cli = ["daemon-slayer-core/cli", "spinoff", "colored"]
config = ["confique"]
docker = ["bollard"]
socket-activation = ["daemon-slayer-core/socket-activation"]
