[package]
edition = "2021"
name = "daemon-slayer-config"
version = "0.1.0"

[dependencies]
arc-swap = {version = "1"}
bat = {version = "0.22", default-features = false, features = ["regex-onig", "paging"], optional = true}
confique = ">= 0.2.2"
daemon-slayer-core = {path = "../daemon-slayer-core", features = ["config"]}
daemon-slayer-file-watcher = {path = "../daemon-slayer-file-watcher"}
derivative = "2"
directories = "4"
edit = "0.1"
futures = "0.3"
tap = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"

[features]
cli = ["daemon-slayer-core/cli"]
pretty-print = ["bat"]
server = ["daemon-slayer-core/server"]

[dev-dependencies]
daemon-slayer-cli = {path = "../daemon-slayer-cli"}
serde = "1.0.152"
tempfile = "3.3.0"
