[package]
edition = "2024"
name = "daemon-slayer-config"
version = "0.1.0"

[dependencies]
arc-swap = { workspace = true }
bat = { workspace = true, default-features = false, features = [
  "regex-onig",
  "paging",
], optional = true }
confique = { workspace = true, features = ["toml", "yaml", "json5"] }
daemon-slayer-core = { workspace = true, features = ["config"] }
daemon-slayer-file-watcher = { workspace = true }
derivative = { workspace = true }
directories = { workspace = true }
edit = { workspace = true }
futures = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true, optional = true }

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
pretty-print = ["bat"]
server = ["daemon-slayer-core/server"]

[dev-dependencies]
daemon-slayer-cli = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
