[package]
edition = "2021"
name = "daemon-slayer-console"
version = "0.1.0"

[dependencies]
confique = { version = ">= 0.2.2", optional = true }
crossterm = { version = "0.27", features = ["event-stream"] }
daemon-slayer-client = { path = "../daemon-slayer-client" }
daemon-slayer-core = { path = "../daemon-slayer-core", features = [
    "server",
    "config",
    "health-check",
], optional = true }
futures = { version = "0.3" }
serde = { version = "1", optional = true }
tilia-widget = { git = "https://github.com/aschey/tilia", rev = "f817ef18f765dabaf209bd6f6d0713c434f3c11f", features = [
    "ipc",
    "docker",
] }
tilia = { git = "https://github.com/aschey/tilia", rev = "f817ef18f765dabaf209bd6f6d0713c434f3c11f", features = [
    "ipc",
    "docker",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ratatui = { version = "0.27" }
async-trait = { version = "0.1", optional = true }

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
config = ["confique", "serde"]
