[package]
edition = "2024"
name = "daemon-slayer-console"
version = "0.1.0"

[dependencies]
confique = { version = "0.3.0", optional = true }
crossterm = { version = "0.29.0", features = ["event-stream"] }
daemon-slayer-client = { path = "../daemon-slayer-client" }
daemon-slayer-core = { path = "../daemon-slayer-core", features = [
  "server",
  "config",
  "health-check",
], optional = true }
futures = { version = "0.3" }
serde = { version = "1", optional = true }
tilia-widget = { git = "https://github.com/aschey/tilia", rev = "054cacf457cd2f5e9723bbd06eae0ae752ca79d1", features = [
  "ipc",
  "docker",
] }
tilia = { git = "https://github.com/aschey/tilia", rev = "054cacf457cd2f5e9723bbd06eae0ae752ca79d1", features = [
  "ipc",
  "docker",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ratatui = { version = "0.29" }
async-trait = { version = "0.1", optional = true }

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
config = ["confique", "serde"]
