[package]
edition = "2024"
name = "daemon-slayer-console"
version = "0.1.0"

[dependencies]
confique = { workspace = true, optional = true }
crossterm = { workspace = true, features = ["event-stream"] }
daemon-slayer-client = { workspace = true }
daemon-slayer-core = { workspace = true, features = [
  "server",
  "config",
  "health-check",
], optional = true }
futures = { workspace = true }
serde = { workspace = true, optional = true }
tilia-widget = { workspace = true, features = ["ipc", "docker"] }
tilia = { workspace = true, features = ["ipc", "docker"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
ratatui = { workspace = true }
async-trait = { workspace = true, optional = true }

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
config = ["confique", "serde"]
