[package]
edition = "2021"
name = "daemon-slayer-core"
version = "0.1.0"

[dependencies]
arc-swap = { version = "1", optional = true }
async-trait = "0.1"
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "a2ad6a6d0c792e54ae7d6ab9fe36953ab4ce4e1c", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
daemon-slayer-macros = { path = "../daemon-slayer-macros", optional = true }
derivative = "2"
downcast-rs = { version = "1", optional = true }
dyn-clonable = { version = "0.9", optional = true }
futures = { version = "0.3" }
owo-colors = { version = "3", optional = true }
pin-project-lite = "0.2"
strum = { version = "0.25", features = ["derive"], optional = true }
tap = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-util = { version = "0.7" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
unicode-width = { version = "0.1", optional = true }
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "563f413a206c50c7cc1a003cf6a9d3b227b0b04d" }
strip-ansi-escapes = { version = "0.2", optional = true }
parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "588198a0abb32a79f6f3e656ff0472008e4ba9b8" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_RemoteDesktop",
    "Win32_System_Environment",
    "Win32_UI_WindowsAndMessaging",
] }
widestring = { version = "1", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
zbus = { version = "3", optional = true, features = ["tokio"] }

[target.'cfg(target_os="macos")'.dependencies]
shlex = { version = "1", optional = true }
regex = { version = "1", optional = true }

[features]
cli = [
    "clap",
    "strum",
    "owo-colors",
    "unicode-width",
    "downcast-rs",
    "strip-ansi-escapes",
]
config = [
    "arc-swap",
    "dyn-clonable",
    "daemon-slayer-macros",
    "daemon-slayer-macros/config",
]
health-check = []
server = ["tokio-stream", "background-service"]
signal = []
notify = []
process = [
    "windows-sys",
    "widestring",
    "zbus",
    "tokio/process",
    "shlex",
    "regex",
]
