[package]
edition = "2021"
name = "daemon-slayer-core"
version = "0.1.0"

[dependencies]
arc-swap = { version = "1", optional = true }
async-trait = "0.1"
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "2d4f0dd65c86b50585827cd12adaa57de3f8b214", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
daemon-slayer-macros = { path = "../daemon-slayer-macros", optional = true }
derivative = "2"
downcast-rs = { version = "1", optional = true }
dyn-clonable = { version = "0.9", optional = true }
futures = { version = "0.3" }
owo-colors = { version = "4", optional = true }
pin-project-lite = "0.2"
strum = { version = "0.26", features = ["derive"], optional = true }
tap = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-util = { version = "0.7" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
unicode-width = { version = "0.1", optional = true }
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
strip-ansi-escapes = { version = "0.2", optional = true }
tipsy = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_System_Environment",
    "Win32_UI_WindowsAndMessaging",
] }
widestring = { version = "1", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
zbus = { version = "4", optional = true, features = ["tokio"] }

[target.'cfg(target_os="macos")'.dependencies]
shlex = { version = "1", optional = true }
regex = { version = "1", optional = true }

[features]
cli = [
    "clap",
    "strum",
    "owo-colors",
    "unicode-width",
    "downcast-rs",
    "strip-ansi-escapes",
]
config = [
    "arc-swap",
    "dyn-clonable",
    "daemon-slayer-macros",
    "daemon-slayer-macros/config",
]
health-check = []
server = ["tokio-stream", "async-stream", "background-service"]
signal = []
notify = []
process = [
    "windows-sys",
    "widestring",
    "zbus",
    "tokio/process",
    "shlex",
    "regex",
]
socket-activation = ["tipsy"]
