[package]
edition = "2024"
name = "daemon-slayer-core"
version = "0.1.0"

[dependencies]
arc-swap = { workspace = true, optional = true }
async-trait = { workspace = true }
background-service = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
daemon-slayer-macros = { workspace = true, optional = true }
derivative = { workspace = true }
downcast-rs = { workspace = true, optional = true }
dyn-clonable = { workspace = true, optional = true }
futures = { workspace = true }
owo-colors = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
strum = { workspace = true, features = ["derive"], optional = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"], optional = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
unicode-width = { workspace = true, optional = true }
futures-cancel = { workspace = true }
strip-ansi-escapes = { workspace = true, optional = true }
tipsy = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true, features = [
  "Win32_Foundation",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_IO",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_System_RemoteDesktop",
  "Win32_System_Environment",
  "Win32_UI_WindowsAndMessaging",
] }
widestring = { workspace = true, optional = true }

[target.'cfg(target_os="linux")'.dependencies]
zbus = { workspace = true, optional = true, features = ["tokio"] }

[target.'cfg(target_os="macos")'.dependencies]
shlex = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

[features]
cli = [
  "clap",
  "strum",
  "owo-colors",
  "unicode-width",
  "downcast-rs",
  "strip-ansi-escapes",
]
config = [
  "arc-swap",
  "dyn-clonable",
  "daemon-slayer-macros",
  "daemon-slayer-macros/config",
]
health-check = []
server = ["tokio-stream", "async-stream", "background-service"]
signal = []
notify = []
process = [
  "windows-sys",
  "widestring",
  "zbus",
  "tokio/process",
  "shlex",
  "regex",
]
socket-activation = ["tipsy"]
