[package]
edition = "2021"
name = "daemon-slayer-error-handler"
version = "0.1.0"

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
notify = ["daemon-slayer-core/notify"]

[dependencies]
color-eyre = "0.6"
daemon-slayer-core = { path = "../daemon-slayer-core" }
tap = "1"
thiserror = "2"
tracing = "0.1"
tokio = "1"
async-trait = { version = "0.1", optional = true }
