[package]
edition = "2024"
name = "daemon-slayer-error-handler"
version = "0.1.0"

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
notify = ["daemon-slayer-core/notify"]

[dependencies]
color-eyre = { workspace = true }
daemon-slayer-core = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true, optional = true }
