[package]
edition = "2024"
name = "daemon-slayer-file-watcher"
version = "0.1.0"

[dependencies]
daemon-slayer-core = { workspace = true, features = ["server"] }
futures = { workspace = true, optional = true }
notify = { workspace = true, default-features = false, features = [
  "fsevent-sys",
  "macos_fsevent",
] }
notify-debouncer-mini = { workspace = true, default-features = false }
tap = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
  "macros",
] }
tokio-util = { workspace = true }
tracing = { workspace = true }
