[package]
edition = "2021"
name = "daemon-slayer-health-check"
version = "0.1.0"

[dependencies]
daemon-slayer-core = { path = "../daemon-slayer-core", features = [
    "health-check",
] }
parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "feb8297ed586862034faed03794d5d46519cd064", optional = true }
reqwest = { version = "0.12", optional = true }
tokio = { version = "1", features = ["net"] }
tonic = { version = "0.12", optional = true }
tonic-health = { version = "0.12", optional = true }
async-trait = "0.1"

[features]
cli = ["daemon-slayer-core/cli"]
grpc-health-check = ["tonic", "tonic-health"]
http-health-check = ["reqwest"]
ipc-health-check = ["parity-tokio-ipc"]
