[package]
edition = "2024"
name = "daemon-slayer-health-check"
version = "0.1.0"

[dependencies]
daemon-slayer-core = { path = "../daemon-slayer-core", features = [
  "health-check",
] }
tipsy = { version = "0.6", optional = true }
reqwest = { version = "0.12", optional = true }
tokio = { version = "1", features = ["net"] }
tonic = { version = "0.13", optional = true }
tonic-health = { version = "0.13", optional = true }
async-trait = "0.1"

[features]
cli = ["daemon-slayer-core/cli"]
grpc-health-check = ["tonic", "tonic-health"]
http-health-check = ["reqwest"]
ipc-health-check = ["tipsy"]
