[package]
edition = "2024"
name = "daemon-slayer-health-check"
version = "0.1.0"

[dependencies]
daemon-slayer-core = { workspace = true, features = ["health-check"] }
tipsy = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net"] }
tonic = { workspace = true, optional = true }
tonic-health = { workspace = true, optional = true }
async-trait = { workspace = true }

[features]
cli = ["daemon-slayer-core/cli"]
grpc-health-check = ["tonic", "tonic-health"]
http-health-check = ["reqwest"]
ipc-health-check = ["tipsy"]
