[package]
edition = "2021"
name = "daemon-slayer-ipc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
bytes = {version = "1.2.1", features = ["serde"]}
daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server"]}
futures = "0.3.25"
parity-tokio-ipc = "0.9.0"
rand = "0.8.5"
serde = "1.0.147"
strum = "0.24.1"
strum_macros = "0.24.3"
tarpc = {version = "0.31.0", features = ["tokio1", "serde-transport"]}
tokio = {version = "1.21.2", features = ["rt-multi-thread", "net", "macros"]}
tokio-serde = {version = "0.8.0", features = ["bincode", "messagepack", "json", "cbor"]}
