[package]
edition = "2021"
name = "daemon-slayer-ipc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1", features = ["serde"]}
daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server"]}
futures = "0.3"
parity-tokio-ipc = "0.9.0"
rand = "0.8.5"
serde = "1"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = {version = "1.27", features = ["rt-multi-thread", "net", "macros"]}
tokio-serde = {version = "0.8", features = ["bincode", "messagepack", "json", "cbor"]}
tokio-util = {version = "0.7", features = ["codec"]}
