[package]
edition = "2021"
name = "daemon-slayer-logging"
version = "0.1.0"

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
config = ["confique", "serde"]
file = ["directories"]
ipc = ["tilia"]
linux-journald = ["tracing-journald"]
mac-oslog = ["tracing-oslog"]
server = ["daemon-slayer-core/server"]
system = ["linux-journald", "mac-oslog", "windows-eventlog"]
windows-eventlog = ["tracing-eventlog"]

[dependencies]
confique = { version = ">= 0.2.2", optional = true }
ctor = "0.2"
daemon-slayer-core = { path = "../daemon-slayer-core", features = ["config"] }
directories = { version = "5", optional = true }
futures = { version = "0.3", optional = true }
once_cell = "1"
serde = { version = "1", optional = true }
tap = "1"
thiserror = "1"
tilia = { git = "https://github.com/aschey/tilia", rev = "f817ef18f765dabaf209bd6f6d0713c434f3c11f", features = [
    "ipc",
], optional = true }
time = "0.3"
tracing = "0.1"
tracing-appender = { version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "local-time",
    "env-filter",
] }
async-trait = { version = "0.1", optional = true }


[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "signal",
    "net",
    "io-util",
    "sync",
], optional = true }
tracing-eventlog = { git = "https://github.com/aschey/tracing-eventlog", rev = "ba94d7635b20f8866067baae2bfb3d28bc883e63", optional = true }

[target.'cfg(unix)'.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
], optional = true }

[target.'cfg(target_os="linux")'.dependencies]
tracing-journald = { version = "0.3", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
tracing-oslog = { version = "0.1", optional = true }
