[package]
edition = "2024"
name = "daemon-slayer-logging"
version = "0.1.0"

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
config = ["confique", "serde"]
file = ["directories"]
ipc = ["tilia"]
linux-journald = ["tracing-journald"]
mac-oslog = ["tracing-oslog"]
server = ["daemon-slayer-core/server"]
system = ["linux-journald", "mac-oslog", "windows-eventlog"]
windows-eventlog = ["tracing-eventlog"]

[dependencies]
confique = { version = "0.3.0", optional = true }
ctor = "0.4"
daemon-slayer-core = { path = "../daemon-slayer-core", features = ["config"] }
directories = { version = "6", optional = true }
futures = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
tap = "1"
thiserror = "2"
tilia = { git = "https://github.com/aschey/tilia", rev = "054cacf457cd2f5e9723bbd06eae0ae752ca79d1", features = [
  "ipc",
], optional = true }
time = "0.3"
tracing = "0.1"
tracing-appender = { version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
  "local-time",
  "env-filter",
] }
async-trait = { version = "0.1", optional = true }


[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "signal",
  "net",
  "io-util",
  "sync",
], optional = true }
tracing-eventlog = { git = "https://github.com/aschey/tracing-eventlog", rev = "a7942ec723de2590ee843f1fda1c8042ab25fa18", optional = true }

[target.'cfg(unix)'.dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
], optional = true }

[target.'cfg(target_os="linux")'.dependencies]
tracing-journald = { version = "0.3", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
tracing-oslog = { version = "0.2", optional = true }
