[package]
edition = "2024"
name = "daemon-slayer-logging"
version = "0.1.0"

[features]
cli = ["daemon-slayer-core/cli", "async-trait"]
config = ["confique", "serde"]
file = ["directories"]
ipc = ["tilia"]
linux-journald = ["tracing-journald"]
mac-oslog = ["tracing-oslog"]
server = ["daemon-slayer-core/server"]
system = ["linux-journald", "mac-oslog", "windows-eventlog"]
windows-eventlog = ["tracing-eventlog"]

[dependencies]
confique = { workspace = true, optional = true }
daemon-slayer-core = { workspace = true, features = ["config"] }
directories = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tap = { workspace = true }
thiserror = { workspace = true }
tilia = { workspace = true, features = ["ipc"], optional = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "local-time",
  "env-filter",
] }
tokio-util = { workspace = true }
async-trait = { workspace = true, optional = true }


[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "signal",
  "net",
  "io-util",
  "sync",
], optional = true }
tracing-eventlog = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
], optional = true }

[target.'cfg(target_os="linux")'.dependencies]
tracing-journald = { workspace = true, optional = true }

[target.'cfg(target_os="macos")'.dependencies]
tracing-oslog = { workspace = true, optional = true }
