[package]
name = "daemon-slayer-network"
version = "0.1.0"
edition = "2021"

[dependencies]
daemon-slayer-core = { path = "../daemon-slayer-core" }
mdns-sd = "0.9"
regex = "1"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
recap = { git = "https://github.com/klaatu01/recap", rev = "97f7923cd18dae3b8ccefb00564fc27569ea812a" }
serde = { version = "1", features = ["derive"] }
gethostname = "0.4"
tokio = { version = "1", features = ["sync"] }
net-route = "0.2"
serde_json = "1"
tokio-util = { version = "0.7", features = ["net", "codec"] }
futures = "0.3"
bytes = "1"
if-addrs = "0.10"
ipnet = "2"
