[package]
name = "daemon-slayer-network"
version = "0.1.0"
edition = "2021"

[dependencies]
daemon-slayer-core = { path = "../daemon-slayer-core" }
mdns-sd = "0.9"
regex = "1"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
recap = { git = "https://github.com/klaatu01/recap", rev = "97f7923cd18dae3b8ccefb00564fc27569ea812a" }
serde = { version = "1", features = ["derive"] }
gethostname = "0.4"
tokio = { version = "1", features = ["sync"] }
net-route = { git = "https://github.com/aschey/net-route", rev = "11d52d1eb12c70d5aefb33229c5ea30e649e41e9" }
serde_json = "1"
tokio-util = { version = "0.7", features = ["net", "codec"] }
futures = "0.3"
bytes = { version = "1", features = ["serde"] }
if-addrs = "0.10"
ipnet = "2"
tap = "1"
tracing = "0.1.40"

[features]
cli = ["daemon-slayer-core/cli"]
